--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <Button
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -34,7 +35,8 @@
         android:layout_marginRight="150dp"
         android:layout_marginBottom="62dp"
         android:background="@color/colorPrimaryDark"
-        android:text="REGISTER" />
+        android:text="REGISTER"
+        tools:ignore="InvalidId" />
 
 
 </RelativeLayout>
