--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rootLayout"
     tools:context=".Register">
 
 
@@ -59,8 +60,8 @@
 
         <EditText
             android:id="@+id/PhoneNbr"
-            android:hint="PhoneNumber"
-            android:text="+2507......"
+            android:hint="+2507......"
+            android:text=""
             android:textSize="20sp"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
