--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -10,9 +10,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text"
-        android:layout_below="@+id/layout2"
-        android:layout_marginTop="59dp"
         android:layout_marginLeft="100dp"
-        android:text="alredy registered sign up here" />
+        android:text="USER DETAILS" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/text"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/listView"
+        android:layout_marginTop="139dp"
+        android:text="Logout"
+        />
 
 </RelativeLayout>
