--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="SIGN up"
+            android:text="SIGNIN"
 
 
             />
@@ -84,8 +84,8 @@
         android:id="@+id/text"
         android:layout_below="@+id/layout2"
         android:layout_marginTop="59dp"
-        android:layout_marginLeft="100dp"
-        android:text="alredy registered sign up here" />
+        android:layout_marginLeft="70dp"
+        android:text="Dont have an account yet? sign up here" />
 
 
 </RelativeLayout>
