--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/money"
+    android:background="@drawable/bgp"
     tools:context=".MainActivity">
 
     <TextView
@@ -22,40 +22,38 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
         app:layout_constraintVertical_bias="0.12" />
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="229dp"
         android:layout_marginTop="300dp"
-        android:layout_marginRight="229dp"
         android:layout_marginBottom="77dp"
         android:background="@color/colorPrimaryDark"
         android:text="register"
         tools:ignore="InvalidId" />
 
-    <Button
-        android:id="@+id/btnsignIn"
+
+    <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
-        android:layout_marginBottom="383dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="signin"
-        tools:ignore="InvalidId" />
+        android:layout_below="@+id/btn"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="68dp"
+        android:text="alredy registered sign in here"
+        android:textColor="@color/white" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:id="@+id/view"
+        android:text="View details"
         />
 
 
